--- a/index.html
+++ b/index.html
@@ -49,23 +49,81 @@
     }
     h2 {
       color: #d48fa4;
+      margin-top: 2rem;
     }
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 10px;
-      margin-top: 1rem;
+    /* Carousel styles */
+    .carousel {
+      position: relative;
+      max-width: 900px;
+      margin: 1rem auto 2rem auto;
+      overflow: hidden;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(212, 143, 164, 0.3);
+      background: white;
     }
-    .gallery-grid img {
+    .carousel-track {
+      display: flex;
+      transition: transform 0.4s ease-in-out;
+      touch-action: pan-y;
+    }
+    .carousel-slide {
+      min-width: 100%;
+      user-select: none;
+      pointer-events: none;
+      position: relative;
+    }
+    .carousel-slide img {
       width: 100%;
       height: auto;
+      display: block;
       border-radius: 10px;
-      object-fit: cover;
-      cursor: pointer;
-      transition: transform 0.2s ease-in-out;
+      pointer-events: auto;
+      user-select: none;
     }
-    .gallery-grid img:hover {
-      transform: scale(1.05);
+    /* Arrows */
+    .carousel-button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(212, 143, 164, 0.8);
+      border: none;
+      color: white;
+      font-size: 2rem;
+      padding: 0.3rem 0.7rem;
+      border-radius: 50%;
+      cursor: pointer;
+      user-select: none;
+      z-index: 10;
+      transition: background 0.3s;
+    }
+    .carousel-button:hover {
+      background: #d48fa4;
+    }
+    .carousel-button.prev {
+      left: 10px;
+    }
+    .carousel-button.next {
+      right: 10px;
+    }
+    /* Dots */
+    .carousel-dots {
+      text-align: center;
+      margin-top: 10px;
+    }
+    .carousel-dots button {
+      border: none;
+      background: #d48fa4;
+      width: 12px;
+      height: 12px;
+      margin: 0 5px;
+      border-radius: 50%;
+      cursor: pointer;
+      opacity: 0.5;
+      transition: opacity 0.3s;
+    }
+    .carousel-dots button.active {
+      opacity: 1;
+      box-shadow: 0 0 5px #d48fa4;
     }
     .contact-button {
       display: inline-block;
@@ -122,35 +180,6 @@
       user-select: none;
       line-height: 1;
     }
-    /* Lightbox overlay */
-    #lightbox {
-      display: none;
-      position: fixed;
-      top:0;
-      left:0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0,0,0,0.85);
-      justify-content: center;
-      align-items: center;
-      z-index: 1500;
-      cursor: zoom-out;
-    }
-    #lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(255,255,255,0.3);
-    }
-    /* Gallery Search input */
-    #gallery-search {
-      width: 100%;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      border: 1px solid #d48fa4;
-      border-radius: 5px;
-      margin-bottom: 1rem;
-    }
   </style>
 </head>
 <body>
@@ -184,57 +213,83 @@
 
   <section id="gallery">
     <h2>Gallery</h2>
-    
-    <!-- Gallery search input -->
-    <input
-      type="text"
-      id="gallery-search"
-      placeholder="Search gallery images..."
-      aria-label="Search gallery images"
-      oninput="filterGalleryImages()"
-    >
 
     <h3>Cakes</h3>
-    <div class="gallery-grid">
-      <img src="Cake1.jpg" alt="Cake 1" onclick="openLightbox(this)" />
-      <!-- ... Add remaining cakes here ... -->
-      <img src="Cake30.jpg" alt="Cake 30" onclick="openLightbox(this)" />
+    <div class="carousel" aria-label="Cakes Carousel">
+      <button class="carousel-button prev" aria-label="Previous Cake">&#10094;</button>
+      <div class="carousel-track">
+        <div class="carousel-slide"><img src="Cake1.jpg" alt="Cake 1" draggable="false" /></div>
+        <!-- Add more cake images as needed -->
+        <div class="carousel-slide"><img src="Cake30.jpg" alt="Cake 30" draggable="false" /></div>
+      </div>
+      <button class="carousel-button next" aria-label="Next Cake">&#10095;</button>
+      <div class="carousel-dots" role="tablist" aria-label="Cake Carousel Navigation"></div>
     </div>
 
     <h3>Cookies</h3>
-    <div class="gallery-grid">
-      <img src="Cookies1.jpg" alt="Cookies 1" onclick="openLightbox(this)" />
-      <!-- ... -->
+    <div class="carousel" aria-label="Cookies Carousel">
+      <button class="carousel-button prev" aria-label="Previous Cookie">&#10094;</button>
+      <div class="carousel-track">
+        <div class="carousel-slide"><img src="Cookies1.jpg" alt="Cookies 1" draggable="false" /></div>
+        <!-- Add more cookie images as needed -->
+      </div>
+      <button class="carousel-button next" aria-label="Next Cookie">&#10095;</button>
+      <div class="carousel-dots" role="tablist" aria-label="Cookies Carousel Navigation"></div>
     </div>
 
     <h3>Cupcakes</h3>
-    <div class="gallery-grid">
-      <img src="Cupcake1.jpg" alt="Cupcake 1" onclick="openLightbox(this)" />
-      <!-- ... -->
+    <div class="carousel" aria-label="Cupcakes Carousel">
+      <button class="carousel-button prev" aria-label="Previous Cupcake">&#10094;</button>
+      <div class="carousel-track">
+        <div class="carousel-slide"><img src="Cupcake1.jpg" alt="Cupcake 1" draggable="false" /></div>
+        <!-- Add more cupcake images as needed -->
+      </div>
+      <button class="carousel-button next" aria-label="Next Cupcake">&#10095;</button>
+      <div class="carousel-dots" role="tablist" aria-label="Cupcakes Carousel Navigation"></div>
     </div>
 
     <h3>Cake & Cookies</h3>
-    <div class="gallery-grid">
-      <img src="Cake&Cookies1.jpg" alt="Cake and Cookies 1" onclick="openLightbox(this)" />
-      <!-- ... -->
+    <div class="carousel" aria-label="Cake and Cookies Carousel">
+      <button class="carousel-button prev" aria-label="Previous Cake and Cookies">&#10094;</button>
+      <div class="carousel-track">
+        <div class="carousel-slide"><img src="Cake&Cookies1.jpg" alt="Cake and Cookies 1" draggable="false" /></div>
+        <!-- Add more images as needed -->
+      </div>
+      <button class="carousel-button next" aria-label="Next Cake and Cookies">&#10095;</button>
+      <div class="carousel-dots" role="tablist" aria-label="Cake and Cookies Carousel Navigation"></div>
     </div>
 
     <h3>Cake & Cupcakes</h3>
-    <div class="gallery-grid">
-      <img src="Cake&Cupcakes1.jpg" alt="Cake and Cupcakes 1" onclick="openLightbox(this)" />
-      <!-- ... -->
+    <div class="carousel" aria-label="Cake and Cupcakes Carousel">
+      <button class="carousel-button prev" aria-label="Previous Cake and Cupcakes">&#10094;</button>
+      <div class="carousel-track">
+        <div class="carousel-slide"><img src="Cake&Cupcakes1.jpg" alt="Cake and Cupcakes 1" draggable="false" /></div>
+        <!-- Add more images as needed -->
+      </div>
+      <button class="carousel-button next" aria-label="Next Cake and Cupcakes">&#10095;</button>
+      <div class="carousel-dots" role="tablist" aria-label="Cake and Cupcakes Carousel Navigation"></div>
     </div>
 
     <h3>Dessert Jars</h3>
-    <div class="gallery-grid">
-      <img src="DessertJars1.jpg" alt="Dessert Jars 1" onclick="openLightbox(this)" />
-      <!-- ... -->
+    <div class="carousel" aria-label="Dessert Jars Carousel">
+      <button class="carousel-button prev" aria-label="Previous Dessert Jar">&#10094;</button>
+      <div class="carousel-track">
+        <div class="carousel-slide"><img src="DessertJars1.jpg" alt="Dessert Jars 1" draggable="false" /></div>
+        <!-- Add more images as needed -->
+      </div>
+      <button class="carousel-button next" aria-label="Next Dessert Jar">&#10095;</button>
+      <div class="carousel-dots" role="tablist" aria-label="Dessert Jars Carousel Navigation"></div>
     </div>
 
     <h3>Cake Pops</h3>
-    <div class="gallery-grid">
-      <img src="CakePops1.jpg" alt="Cake Pops 1" onclick="openLightbox(this)" />
-      <!-- ... -->
+    <div class="carousel" aria-label="Cake Pops Carousel">
+      <button class="carousel-button prev" aria-label="Previous Cake Pop">&#10094;</button>
+      <div class="carousel-track">
+        <div class="carousel-slide"><img src="CakePops1.jpg" alt="Cake Pops 1" draggable="false" /></div>
+        <!-- Add more images as needed -->
+      </div>
+      <button class="carousel-button next" aria-label="Next Cake Pop">&#10095;</button>
+      <div class="carousel-dots" role="tablist" aria-label="Cake Pops Carousel Navigation"></div>
     </div>
   </section>
 
@@ -293,11 +348,6 @@
   <!-- Back to top button -->
   <div class="back-to-top" title="Back to top" onclick="scrollToTop()">⬆️</div>
 
-  <!-- Lightbox container -->
-  <div id="lightbox" onclick="closeLightbox()">
-    <img src="" alt="Expanded image" />
-  </div>
-
   <script>
     // Scroll to top functionality
     function scrollToTop() {
@@ -310,37 +360,84 @@
       btn.style.display = window.scrollY > 300 ? "block" : "none";
     });
 
-    // Lightbox open function
-    function openLightbox(img) {
-      const lightbox = document.getElementById("lightbox");
-      const lightboxImg = lightbox.querySelector("img");
-      lightboxImg.src = img.src;
-      lightboxImg.alt = img.alt;
-      lightbox.style.display = "flex";
-      document.body.style.overflow = "hidden"; // prevent background scroll
-    }
+    // Carousel functionality for multiple carousels
+    function initCarousel(carousel) {
+      const track = carousel.querySelector('.carousel-track');
+      const slides = Array.from(track.children);
+      const prevButton = carousel.querySelector('.carousel-button.prev');
+      const nextButton = carousel.querySelector('.carousel-button.next');
+      const dotsNav = carousel.querySelector('.carousel-dots');
 
-    // Lightbox close function
-    function closeLightbox() {
-      const lightbox = document.getElementById("lightbox");
-      lightbox.style.display = "none";
-      document.body.style.overflow = ""; // restore scroll
-    }
+      let currentIndex = 0;
+      const slideCount = slides.length;
 
-    // Gallery image filter based on search input
-    function filterGalleryImages() {
-      const filter = document.getElementById("gallery-search").value.toLowerCase();
-      const galleryImages = document.querySelectorAll("#gallery .gallery-grid img");
+      // Clear dotsNav before adding (important if re-initializing)
+      dotsNav.innerHTML = '';
 
-      galleryImages.forEach(img => {
-        const altText = img.alt.toLowerCase();
-        if (altText.includes(filter)) {
-          img.style.display = "";
-        } else {
-          img.style.display = "none";
-        }
+      // Create dots
+      slides.forEach((_, index) => {
+        const button = document.createElement('button');
+        button.setAttribute('aria-label', `Slide ${index + 1}`);
+        if (index === 0) button.classList.add('active');
+        button.addEventListener('click', () => {
+          currentIndex = index;
+          updateCarousel();
+        });
+        dotsNav.appendChild(button);
       });
+      const dots = Array.from(dotsNav.children);
+
+      function updateCarousel() {
+        track.style.transform = `translateX(-${currentIndex * 100}%)`;
+        dots.forEach(dot => dot.classList.remove('active'));
+        dots[currentIndex].classList.add('active');
+      }
+
+      function nextSlide() {
+        currentIndex = (currentIndex + 1) % slideCount;
+        updateCarousel();
+      }
+
+      function prevSlide() {
+        currentIndex = (currentIndex - 1 + slideCount) % slideCount;
+        updateCarousel();
+      }
+
+      nextButton.addEventListener('click', nextSlide);
+      prevButton.addEventListener('click', prevSlide);
+
+      // Touch/swipe support for mobile
+      let startX = 0;
+      let isDragging = false;
+
+      track.addEventListener('touchstart', e => {
+        startX = e.touches[0].clientX;
+        isDragging = true;
+      });
+
+      track.addEventListener('touchmove', e => {
+        if (!isDragging) return;
+        // Could add drag feedback here if desired
+      });
+
+      track.addEventListener('touchend', e => {
+        if (!isDragging) return;
+        const endX = e.changedTouches[0].clientX;
+        const diff = endX - startX;
+        if (diff > 50) {
+          prevSlide();
+        } else if (diff < -50) {
+          nextSlide();
+        }
+        isDragging = false;
+      });
+
+      // Initialize position
+      updateCarousel();
     }
+
+    // Initialize all carousels on page load
+    document.querySelectorAll('.carousel').forEach(initCarousel);
 
     // WhatsApp enquiry form send
     function sendWhatsAppEnquiry() {
